<resources>
    <string name="app_name">My Application</string>
    <string name="i_am_here">I Am Here</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>


    <string name="Password">Password</string>
    <string name="phone_no">Phone No</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="button">Button</string>
    <string name="username">Username</string>
    <string name="register1">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="textview">TextView</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login1">Login</string>
    <string name="title_activity_main_page_after_login">MainPageAfterLogin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>