<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="185dp"
        android:layout_height="165dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/name"
        android:layout_width="185dp"
        android:layout_height="35dp"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="150dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/i_am_here"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#0C0909"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/Login"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="#090909"
        app:iconPadding="20dp"
        app:iconTint="#F4E7E7"
        app:layout_constraintBottom_toTopOf="@+id/Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Register"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Register"
        android:textAlignment="center"
        android:textColor="#0E0E0E"
        android:textStyle="normal"
        app:iconPadding="20dp"
        app:iconTint="#F4E7E7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>