<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".login">

    <TextView
        android:id="@+id/name"
        android:layout_width="146dp"
        android:layout_height="40dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="734dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Login"
        android:textAlignment="center"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="13dp"
        android:text="@string/phone_no"
        android:textAlignment="center"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="105dp"
        android:layout_height="37dp"
        android:layout_marginStart="91dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="197dp"
        android:layout_marginBottom="14dp"
        android:text="@string/Password"
        android:textAlignment="center"
        android:textColor="#151414"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="403dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginStart="118dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="294dp"
        android:text="@string/Login"
        android:textColor="#EA80FC"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>